# playrpgdate

./: .gitignore  .gitmodules  CMakeLists.txt  bootstrap.sh  build_playdate.sh  build_simulator.sh  readme.md
Docs/: Architecture.md  Building.md  GAME_SYSTEMS.md  Maps.md  NextSteps.md  SAVE_SYSTEM_README.md  SAVE_SYSTEM_SETUP.md  UI_REFACTORING_GUIDE.md  UI_REFACTORING_SUMMARY.md
Python-tools/: convert-to-grayscale.py
Source/: Creature.cpp  EntityManager.cpp  EntityManager.h  GameManager.h  Item.cpp  Item.h  Player.cpp  main.cpp  pdex.dylib  pdex.elf  pdxinfo
Source/data/: areas.json  armors.json  creatures.json  doors.json  items.json  map.json  samplemap.json  test.json  weapons.json
Source/data/areas/: 00_downtown_tiledmap.json
Source/launcher/card-highlighted/: animation.txt
others/: 00_downtown_tiledmap.tmx  anim-table-40-32.tsx  castle_tiled_map.tmx  maptiled.tiled-session  tilemap.tmx  tileset.tsx
src/: AStarContainer.cpp  AStarContainer.h  AStarNode.cpp  AStarNode.h  AnimationClip.cpp  AnimationClip.h  Area.cpp  Area.h  Armor.cpp  Armor.h  AutoProjectile.cpp  AutoProjectile.h  Beam.cpp  Beam.h  CircularBuffer.h  CircularProgress.cpp  CircularProgress.h  Creature.cpp  Creature.h  Dialogue.cpp  Dialogue.h  Door.cpp  Door.h  EnemyProjectile.cpp  EnemyProjectile.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  GameManager.cpp  GameManager.h  Globals.h  Inventory.cpp  Inventory.h  Item.cpp  Item.h  Log.cpp  Log.h  Magic.cpp  Magic.h  (+30 more)
